--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 body {
-  margin:20px;
+  margin:0;
+  padding:0;
+  color:#fff;
   font-size:14px;
   font-family: "Century Gothic", Futura, sans-serif;
+  background-color:#2c3e50;
 }
-/* ol, ul {
-  padding-left:30px;
-} */
+ol, ul {
+  margin:0;
+  padding:0;
+}
